--- a/tools/markdown-to-speech/package.json
+++ b/tools/markdown-to-speech/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/text-to-speech": "3.1.0",
     "jsdom": "16.4.0",
     "markdown-it": "11.0.0",
     "markdown-it-anchor": "5.3.0",
